--- a/views/facultylogin.ejs
+++ b/views/facultylogin.ejs
@@ -3,7 +3,7 @@
 <div class="row login-outer">
 <div class="col-sm-5 login centered">
   <h1 style="color:black">Login</h1>
-  <form action="/login" method="POST">
+  <form action="/faculty-login" method="POST">
     <div class="form-group">
       <label for="email">Email</label>
       <input type="email" class="form-control" name="username" placeholder="Email">
@@ -21,3 +21,6 @@
 </div>
 </div>
 </div>
+</div>
+</body>
+</html>
