--- a/views/stdntlogin.ejs
+++ b/views/stdntlogin.ejs
@@ -2,7 +2,7 @@
 <div class="row">
 <div class="col-sm-5 login centered">
   <h1 style="color:black">Login</h1>
-  <form action="/login" method="POST">
+  <form action="/student-login" method="POST">
     <div class="form-group">
       <label for="email">Email</label>
       <input type="email" class="form-control" name="username" placeholder="Email">
@@ -21,3 +21,6 @@
   <p class="login-para">project approval system is a system through which you can get your project approve..</p>
 </div>
 </div>
+</div>
+</body>
+</html>
