--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -18,5 +18,5 @@
       </div>
     </nav>
   </head>
-  <body>
-    <div class="container main_div">
+  <body class="main-div">
+    <div class="container">
