faculty side done

--- a/views/partials/student-header.ejs
+++ b/views/partials/student-header.ejs
@@ -17,7 +17,7 @@
             <%- name -%> <span class="caret"></span>
           </button>
           <ul class="dropdown-menu">
-            <li><a href="/student-home">Home</a></li>
+            <li><a href=<%= type %> >Home</a></li>
             <li><a href="/show-form">Profile</a></li>
             <li><a href="/about">About Us</a></li>
             <li><a href="/contact">Contact Us</a></li>
