--- a/views/faculty-home.ejs
+++ b/views/faculty-home.ejs
@@ -1,13 +1,16 @@
 <%- include("partials/student-header") -%>
 
+<% if (count=="1"){ %>
+
 <h1 align="center">PROJECT</h1>
 
-<% students.forEach(function(student) { %>
-<div class="title-div-2">
-<h2><% student.gname%> <a name="useremail"   href="/show-form" style="float: right" value=<% student.email %>>View More</a></h2>
+<% for(student of group) { %>
+    <div class="title-div-2">
+<h2><%- student.gname -%><a name="userid"  href="/detail/<%=student._id%>" style="float: right">View More</a></h2>
 </div>
-<% }); %>
-
+<% };}else{ %>
+<h1 align="center">No One Has Asigned To You</h1>
+<% } %>
 </div>
 </body>
 </html>
