--- a/views/facultylogin.ejs
+++ b/views/facultylogin.ejs
@@ -6,11 +6,11 @@
   <form action="/faculty-login" method="POST">
     <div class="form-group">
       <label for="email">Email</label>
-      <input type="email" class="form-control" name="username" placeholder="Email">
+      <input type="email" class="form-control" name="username" placeholder="Email" required>
     </div>
     <div class="form-group">
       <label for="password">Password</label>
-      <input type="password" class="form-control" name="password" placeholder="password">
+      <input type="password" class="form-control" name="password" placeholder="password" required>
     </div>
     <button type="submit" class="btn btn-lg login_btn">Login</button>
   </form>
