--- a/views/register.ejs
+++ b/views/register.ejs
@@ -19,9 +19,9 @@
             </div>
             <div class="form-group">
               <label for="password">Password</label>
-              <input type="password" class="form-control" name="password" required >
-          <!-- pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{6,}" title="Must contain at least one number and one uppercase and lowercase letter, and at least 6 or more characters"
-            --></div>
+              <input type="password" class="form-control" name="password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
+  title="Must contain at least one  number and one uppercase and lowercase letter, and at least 8 or more characters" required>
+            </div>
             <button type="submit" class="btn btn-dark">Register</button>
             <a href="/student-login" class="btn login_btn_2">login</a>
           </form>
