--- a/public/css/style.css
+++ b/public/css/style.css
@@ -28,7 +28,7 @@ margin: 4em;
   left: 0;
   width: 300px;
   height: 300px;
-  background-color: #F5F5EE;
+  background-color: rgb(240,240,240);
   border-radius: 3px;
 }
 
