--- a/views/student-home.ejs
+++ b/views/student-home.ejs
@@ -3,7 +3,7 @@
 <% if(count=="1"){%>
   <h1 class="title-head">Your Project</h1>
   <div class="title-div">
-    <h2 class="title-title"><%- title -%><a href="/show-form" style="float: right" class="title-viewmore">View details</a></h2>
+    <h2 class="title-title"><%- title -%><a class="a-status"href="#">status</a><a href="/show-form" style="float: right" class="title-viewmore">View details</a></h2>
 </div>
 <br><br>
 <h1 style="text-align: center">Project Weekly updates</h1>
