--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -3,8 +3,9 @@
   <head>
     <meta charset="utf-8">
     <title>project manager</title>
+</script>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/css/style.css">
+    <link  rel="stylesheet" href="/css/style.css">
     <nav class="navbar navbar-default navigation">
       <div class="container navigation_padding">
         <div class="navbar-header">
